Fix panel group spacing

--- a/web_client/stylesheets/body/image.styl
+++ b/web_client/stylesheets/body/image.styl
@@ -26,10 +26,8 @@
 
     overflow-y auto
 
-    .h-control-panel.g-panel-group
-      background-color rgba(255, 255, 255, 0.5)
-      border 1px solid black
-      border-radius 5px
+    .g-panel-group
+      margin 5px 0
 
   #h-annotation-selector-container
     position absolute
@@ -37,7 +35,6 @@
     z-index 900
     right 0
     overflow-y auto
-    width 300px
 
     .g-panel
       margin-right 5px
